# MCP_Server_RAG_Fusion

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_SQLCL_TIMEOUT.md  IMPLEMENTATION_SUMMARY.md  MCP_SERVERS_AVAILABLE_REPORT.md  MICROSERVICES_REFACTORING_SUMMARY.md  QUICKSTART_GUIDE.md  README.md  README_MICROSERVICES.md  SQLCL_MCP_TIMEOUT_REPORT.md  USER_GUIDE.md  VISUAL_GUIDE.md  deploy-microservices.ps1  docker-compose-microservices.yml  docker-compose.yml  pyproject.toml  quick_validate.py  requirements-server.txt  requirements.txt  run_server.py  test_client.py  test_docker_search.ps1  test_indexer.py  test_mcp.py  test_microservices.py  test_server.py  validate_server.py
.github/: copilot-instructions.md
configs/: mcp-tools.json  model-config.yml  server.env
docker/: .dockerignore  Dockerfile.indexer  Dockerfile.indexer-service  Dockerfile.mcp-gateway  Dockerfile.retrieval-service  Dockerfile.server
docs/: ARCHITECTURE_COMPARISON.md  CONFIG.md  MICROSERVICES_ARCHITECTURE.md  OPERATIONS.md  SQLCL_CODEX_CUSTOM_MCP_SETUP.md  TROUBLESHOOTING.md  github-copilot-cli-implementation-report.md  hp-e23-g4-profile-setup.md
indexer/: __init__.py  build_bm25.py  build_faiss.py  chunk.py  cli.py  embed.py  ingest.py  pipeline.py  utils.py
monitoring/: grafana-dashboard.json  prometheus.yml
scripts/: configure-sqlcl-cline-timeout.ps1  start-sqlcl-mcp.cmd  start-sqlcl-mcp.ps1
server/: __init__.py  app.py  fusion.py  mcp_handlers.py  models.py  retriever.py  (+2 more)
(+14 files in other folders)
